Add pet & owner function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,12 @@
       "ES2022",
       "dom"
     ],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "$amplify/*": [
+        "./.amplify/generated/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
