--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@aws-amplify/ui-angular": "^5.0.16",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@types/aws-lambda": "^8.10.138",
+    "@types/sharp": "^0.32.0",
     "aws-amplify": "^6.2.0",
+    "modern-normalize": "^2.0.0",
+    "moment": "^2.30.1",
+    "normalize": "^0.3.1",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.17.0",
     "rxjs": "~7.8.0",
+    "sharp": "^0.33.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
