solve the problem: amplify/functions/create-image-thumbs/handler.ts(3,21): error TS2307: Cannot find module '/env/gen-image-thumbs' or its corresponding type declarations.

--- a/amplify/tsconfig.json
+++ b/amplify/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  "exclude": [
+    "node_modules",
+    ".amplify",
+    "./amplify"
+  ],
   "compilerOptions": {
     "target": "es2022",
     "module": "es2022",
