solve the problem: amplify/functions/create-image-thumbs/handler.ts(3,21): error TS2307: Cannot find module '/env/gen-image-thumbs' or its corresponding type declarations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    ".amplify",
+    "./amplify"
+  ]
 }
