--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@aws-amplify/backend": "^1.0.0",
     "@aws-amplify/backend-cli": "^1.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.12.12",
     "aws-cdk": "^2.137.0",
     "aws-cdk-lib": "^2.137.0",
     "constructs": "^10.3.0",
