--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,13 +3,15 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "node"
+    ]
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts",
-    "amplify/**/*.ts"
+    "src/**/*.d.ts"
   ]
 }
